css/index.css
/* Defaults */
:root {
	--font-family: -apple-system, system-ui, sans-serif;
	--font-family-monospace: Consolas, Menlo, Monaco, Andale Mono WT, Andale Mono, Lucida Console, Lucida Sans Typewriter, DejaVu Sans Mono, Bitstream Vera Sans Mono, Liberation Mono, Nimbus Mono L, Courier New, Courier, monospace;
}

/* Theme colors */
:root {
	--color-gray-20: #e0e0e0;
	--color-gray-50: #C0C0C0;
	--color-gray-90: #333;

	--background-color: #fff;

	--text-color: var(--color-gray-90);

	--text-color-link: #264caf;
	--text-color-link-active: #204092;
	--text-color-link-visited: #204092;
	--text-color-wiki: #009c7b;
	--text-color-wiki-visited: #008064;
	--text-color-invalid-wikilink: #8c8c8c;

	--syntax-tab-size: 2;
}

@media (prefers-color-scheme: dark) {
	:root {
		--color-gray-20: #e0e0e0;
		--color-gray-50: #C0C0C0;
		--color-gray-90: #dad8d8;

		/* --text-color is assigned to --color-gray-_ above */
		--text-color-link: #82aecd;
		--text-color-link-active: #59b3f3;
		--text-color-link-visited: #59b3f3;
		--text-color-wiki: #a0e4a0;
		--text-color-wiki-visited: #90f390;
		--text-color-invalid-wikilink: #8c8c8c;

		--background-color: #15202b;
	}
}


/* Global stylesheet */
* {
	box-sizing: border-box;
}

html,
body {
	padding: 0;
	margin: 0 auto;
	font-family: var(--font-family);
	color: var(--text-color);
	background-color: var(--background-color);
}
html {
	overflow-y: scroll;
}
body {
	max-width: 40em;
}

/* https://www.a11yproject.com/posts/how-to-hide-content/ */
.visually-hidden {
	clip: rect(0 0 0 0);
	clip-path: inset(50%);
	height: 1px;
	overflow: hidden;
	position: absolute;
	white-space: nowrap;
	width: 1px;
}

p:last-child {
	margin-bottom: 0;
}
p {
	line-height: 1.5;
}

li {
	line-height: 1.5;
}

a[href] {
	color: var(--text-color-link);
}
a[href]:visited {
	color: var(--text-color-link-visited);
}
a[href]:hover,
a[href]:active {
	color: var(--text-color-link-active);
}

main {
	padding: 1rem;
}
main :first-child {
	margin-top: 0;
}

header {
	border-bottom: 1px dashed var(--color-gray-20);
}
header:after {
	content: "";
	display: table;
	clear: both;
}

.links-nextprev {
	list-style: none;
	border-top: 1px dashed var(--color-gray-20);
	padding: 1em 0;
}

table {
	margin: 1em 0;
}
table td,
table th {
	padding-right: 1em;
}

pre,
code {
	font-family: var(--font-family-monospace);
}
pre:not([class*="language-"]) {
	margin: .5em 0;
	line-height: 1.375; /* 22px /16 */
	-moz-tab-size: var(--syntax-tab-size);
	-o-tab-size: var(--syntax-tab-size);
	tab-size: var(--syntax-tab-size);
	-webkit-hyphens: none;
	-ms-hyphens: none;
	hyphens: none;
	direction: ltr;
	text-align: left;
	white-space: pre;
	word-spacing: normal;
	word-break: normal;
}
code {
	word-break: break-all;
}

/* Header */
header {
	display: flex;
	gap: 1em .5em;
	flex-wrap: wrap;
	align-items: center;
	padding: 1em;
}
.home-link {
	font-size: 1em; /* 16px /16 */
	font-weight: 700;
	margin-right: 2em;
}
.home-link:link:not(:hover) {
	text-decoration: none;
}

/* Nav */
.nav {
	display: flex;
	padding: 0;
	margin: 0;
	list-style: none;
}
.nav-item {
	display: inline-block;
	margin-right: 1em;
}
.nav-item a[href]:not(:hover) {
	text-decoration: none;
}
.nav a[href][aria-current="page"] {
	text-decoration: underline;
}

/* Posts list */
.postlist {
	list-style: none;
	padding: 0;
	padding-left: 1.5rem;
}
.postlist-item {
	display: flex;
	flex-wrap: wrap;
	align-items: baseline;
	counter-increment: start-from -1;
	margin-bottom: 1em;
}
.postlist-item:before {
	display: inline-block;
	pointer-events: none;
	content: "" counter(start-from, decimal-leading-zero) ". ";
	line-height: 100%;
	text-align: right;
	margin-left: -1.5rem;
}
.postlist-date,
.postlist-item:before {
	font-size: 0.8125em; /* 13px /16 */
	color: var(--color-gray-90);
}
.postlist-date {
	word-spacing: -0.5px;
}
.postlist-link {
	font-size: 1.1875em; /* 19px /16 */
	font-weight: 700;
	flex-basis: calc(100% - 1.5rem);
	padding-left: .25em;
	padding-right: .5em;
	text-underline-position: from-font;
	text-underline-offset: 0;
	text-decoration-thickness: 1px;
}
.postlist-item-active .postlist-link {
	font-weight: bold;
}

/* Tags */
.post-tag {
	display: inline-flex;
	align-items: center;
	justify-content: center;
	text-transform: capitalize;
	font-style: italic;
}
.postlist-item > .post-tag {
	align-self: center;
}

/* Tags list */
.post-metadata {
	display: inline-flex;
	flex-wrap: wrap;
	gap: .5em;
	list-style: none;
	padding: 0;
	margin: 0;
}
.post-metadata time {
	margin-right: 1em;
}

/* Direct Links / Markdown Headers */
.header-anchor {
	text-decoration: none;
	font-style: normal;
	font-size: 1em;
	margin-left: .1em;
}
a[href].header-anchor,
a[href].header-anchor:visited {
	color: transparent;
}
a[href].header-anchor:focus,
a[href].header-anchor:hover {
	text-decoration: underline;
}
a[href].header-anchor:focus,
:hover > a[href].header-anchor {
	color: #aaa;
}

h2 + .header-anchor {
	font-size: 1.5em;
}

/* bread-crumbs include */

.bread-crumbs ol {
	list-style: '> ';
	display: flex;
	align-self: center;
	overflow-x: scroll;
	white-space: nowrap;
	padding-left: 0px;
}

.bread-crumbs li {
	padding-right: 1.5em;
}

.site-item {
	list-style: none;
}

/* back-refs include */

.back-refs li {
	list-style: '';
}
.back-refs {
	padding: 2em 1em 6em 1em;
	margin: 2em;
	border: 1px solid #ccc!important;
	border-radius: 25px;
}
.title {
	color: #ccc;
	text-align: center;
}
.sections {
	display: flex;
	align-items: flex-start;
	justify-content: space-evenly;
}
.section-title {
	color: #ccc;
	text-align: center;
}
.attrtype {
  padding-left: 0px;
}

/* tag map / semantic tree */

.branch {
	color: var(--text-color-wiki);
	list-style: "#";
}

/******************/
/* wikiref styles */
/******************/


/* wikiattr */

/* attrbox */
aside.attrbox {
	text-align: center;
	border: 1px double #ccc;
	color: #ccc;
	border-radius: 25px;
	border-spacing: 1em;
	/* @noflip */
	margin: 0.5em;
	padding: 0.2em;
	/* @noflip */
	float: right;
}
span.attrbox-title {
	margin: 0.5em;
	color: #ccc;
}
/* from: https://www.the-art-of-web.com/css/format-dl/ */
dl {
	margin: 0.5em;
}
dt {
	width: 100px;
	float: left;
	clear: left;
	text-align: right;
	font-weight: bold;
}
dt::after {
	content: ":";
}
dd {
	margin: 0 0 0 110px;
	padding: 0 0 0.5em 0;
}

/* (internal) wiki links */
a.wiki[href] {
	color: var(--text-color-wiki);
}
a.wiki[href]:visited {
	color: var(--text-color-wiki-visited);
}
a.invalid {
	color: var(--text-color-invalid-wikilink);
	cursor: help;
}

/* !wikiembed */

.embed-wrapper {
	border: 1px solid #535353;
	border-radius: 6px;
	padding: 5px 20px 15px 20px;
	margin: 0 20px;
	position: relative;
}
.embed-title {
	height: 36px;
	text-overflow: ellipsis;
	overflow: hidden;
	white-space: nowrap;
	font-size: 26px;
	line-height: 42px;
	top: 5px;
	left: 0;
	right: 0;
	width: 100%;
	text-align: center;
	font-weight: 900;
}
.embed-link {
	position: absolute;
	top: 6px;
	right: 12px;
	cursor: pointer;
}
.embed-link-icon {
	text-decoration: none;
}
.link-icon {
	font-size: 18px;
	color: #535353;
}
.link-icon::before{
	content: "🔗";
}
.embed-content {
	max-height: 500px;
	overflow-y: auto;
	padding-right: 10px;
}
/* embed media */
.embed-media {
	margin: 0 auto;
}
.embed-audio {
	height: 100%;
	width: 100%;
}
.embed-image {
	height: 50%;
	width: 50%;
}
.embed-video {
	height: 75%;
	width: 75%;
}

